tests/rosetta/out/Rust/checkpoint-synchronization-1.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:54Z
fn main() {
    let mut partList = vec!["A", "B", "C", "D"];
    let mut nAssemblies = 3;
    for cycle in 1..(nAssemblies + 1) {
        println!("{}", format!("{}{}", "begin assembly cycle ", cycle.to_string()));
        for p in partList {
            println!("{}", format!("{}{}", p, " worker begins part"));
        }
        for p in partList {
            println!("{}", format!("{}{}", p, " worker completes part"));
        }
        println!("{}", format!("{}{}", format!("{}{}", "assemble.  cycle ", cycle.to_string()), " complete"));
    }
}
